# proto_local_tidy_helper

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts
backend/: pyproject.toml
backend/tests/: conftest.py  test_api.py  test_pipeline.py  test_vision.py
backend/tidy_helper/: __init__.py
backend/tidy_helper/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/tidy_helper/app/services/: __init__.py  camera.py  diagnostics.py  pipeline.py  prompting.py  runtime.py  vision.py
electron/: main.js  preload.js  tray-icon.js
src/: App.tsx  api.ts  i18n.ts  styles.css  types.ts
tests/e2e/: dashboard.spec.ts
